# ComfyUI-Gallery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FORK_NOTES.md  README.md  SECURITY.md  folder_monitor.py  folder_scanner.py  pyproject.toml  server.py  user_settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  validate.yml
docs/: DEMO_SCRIPT.md  FEATURES.md  PUBLICATION_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md
web/: README.md  package.json
web/src/: ComfyAppApi.ts  GalleryContext.tsx  GalleryFolderBar.tsx  GalleryHeader.tsx  GalleryImageGrid.tsx  GalleryModal.tsx  GalleryOpenButton.tsx  GallerySettingsModal.tsx  GallerySidebar.tsx  ImageCard.tsx  ModelViewer.tsx  downloadMedia.ts  galleryFolderUtils.ts  gallerySearch.ts  main.tsx  types.ts
web/src/metadata-parser/: metadataParser.ts  promptMetadataParser.ts
