[project]
name = "ComfyUI-Gallery"
description = "Real-time Gallery for ComfyUI with image metadata inspection. Support for images and video."
version = "2.7.0"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/zaynemayfield/ComfyUI-Gallery"
Upstream = "https://github.com/PanicTitan/ComfyUI-Gallery"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zaynemayfield"
DisplayName = "ComfyUI-Gallery"
Icon = "https://raw.githubusercontent.com/zaynemayfield/ComfyUI-Gallery/refs/heads/main/logo.png"
