[project]
name = "ComfyUI-Gallery"
description = "Fast ComfyUI output gallery with media browsing, metadata search, video thumbnails, folder actions, and bulk file management."
version = "2.8.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zaynemayfield/ComfyUI-Gallery"
Upstream = "https://github.com/PanicTitan/ComfyUI-Gallery"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zaynemayfield"
DisplayName = "ComfyUI-Gallery"
Icon = "https://raw.githubusercontent.com/zaynemayfield/ComfyUI-Gallery/refs/heads/main/logo.png"
