[project]
name = "ComfyUI-Gallery"
description = "Fast ComfyUI media gallery with metadata search, video thumbnails, compact related outputs, folder actions, and bulk file management."
version = "2.9.0"
license = {file = "LICENSE"}
keywords = ["comfyui", "gallery", "metadata", "video", "thumbnails", "custom-node"]

[project.urls]
Repository = "https://github.com/zaynemayfield/ComfyUI-Gallery"
Upstream = "https://github.com/PanicTitan/ComfyUI-Gallery"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zaynemayfield"
DisplayName = "ComfyUI-Gallery"
Icon = "https://raw.githubusercontent.com/zaynemayfield/ComfyUI-Gallery/refs/heads/main/logo.png"
